issue #378: fixing the list items disposition and alignment of radios

--- a/components/list/src/vwc-check-list-item.scss
+++ b/components/list/src/vwc-check-list-item.scss
@@ -6,7 +6,6 @@
 }
 
 :host(:not([left])) > .mdc-list-item__meta {
-	--mdc-list-item-meta-size: 22px;
-	width: var(--mdc-list-item-meta-size);
-	height: var(--mdc-list-item-meta-size);
+	width: 22px;
+	height: 22px;
 }
